# section-properties

./: .cookiecutter.json  .coverage  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CrossSectionAnalysis.py  LICENSE  LICENSE.md  MANIFEST.in  Nastran Plastic Property Error.ipynb  README.md  README.rst  README_pypi.rst  bridge_sections.ipynb  codecov.yml  compound_from_points.ipynb  cross-section.py  elementDefinitions.py  example.json  example.py  femFunctions.py  femUtilities.py  main.py  mesh2D.py  meshing_error.ipynb  noxfile.py  otherUtilities.py  pyproject.toml  ruff.toml  runner  sectionGenerator.py  (+8 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  documentation.md  feature_request.md
.github/workflows/: black.yml  build_deploy.yml  ci.yml  code_coverage.yml  constraints.txt  coverage.yml  draft-pdf.yml  greetings.yml  install-package.yml  labeler.yml  package-install.yml  release.yml  tests.yml
.ipynb_checkpoints/: Dissimilar_Materials_Error-checkpoint.ipynb  Nastran Plastic Property Error-checkpoint.ipynb  bridge_sections-checkpoint.ipynb  compound_from_points-checkpoint.ipynb  meshing_error-checkpoint.ipynb  triangle_v_meshpy-checkpoint.ipynb
docs/: Makefile  api.md  api.rst  codeofconduct.rst  conf.py  conftest.py  contributing.rst  examples.rst  index.md  index.rst  installation.rst  output.md  requirements.txt  sectionGenerator.md  todo.md  user_guide.md  user_guide.rst
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/examples/: advanced_geometry.ipynb  simple_circle.ipynb
docs/examples/advanced/: advanced_plot.ipynb  mesh_refinement.ipynb  peery.ipynb  rectangle_torsion.ipynb  trapezoidal_torsion.ipynb
docs/examples/analysis/: export_fibre_section.ipynb  frame_analysis.ipynb  geometric_analysis.ipynb  plastic_analysis.ipynb  stress_analysis.ipynb  warping_analysis.ipynb
docs/examples/geometry/: advanced_geometry.ipynb  create_mesh.ipynb  geometry_cad.ipynb  geometry_coordinates.ipynb  geometry_manipulation.ipynb  section_library.ipynb
docs/examples/materials/: assign_materials.ipynb  composite_analysis.ipynb
docs/examples/results/: display_results.ipynb  export_fibre_section.ipynb  get_results.ipynb  get_stress.ipynb  plot_centroids.ipynb  plot_stress.ipynb
docs/examples/validation/: peery.ipynb  pilkey_arc.ipynb  pilkey_channel.ipynb  pilkey_composite.ipynb
docs/source/: conf.py  index.rst  requirements_docs.txt
docs/source/_static/: style.css
docs/source/_templates/: layout.html
docs/source/rst/: advanced_geom.rst  analysis.rst  api.rst  cross_section.rst  examples.rst  geom_mesh.rst  installation.rst  overview.rst  pre.rst  (+8 more)
docs/user_guide/: analysis.md  analysis.rst  geometry.rst  materials.md  materials.rst  meshing.md  meshing.rst  overview.rst  results.rst  theory.md  theory.rst  validation.md  validation.rst
examples/: README.rst  example_advanced1.py  example_advanced2.py  example_merged.py  example_simple.py  example_stress.py
examples/00-basic/: 01_simple.py  02_nastran_section.py  03_custom.py  04_merged.py  05_mirr_rot.py  06_stress.py  07_composite.py  08_frame.py  09_cad_import.py  README.rst
examples/01-advanced/: 01-torsion_constant.py  01_advanced_plotting.py  02-mesh_refinement.py  02_mesh_refinement.py  03_torsion_constant.py  04_peery_beams.py  05_trapz_approximation.py  README.rst
examples/11-simo/: rectangle.py
paper/: paper.bib  paper.md
paper/example/: paper_example.ipynb
sectionproperties/: __init__.py  sectionproperties.py
sectionproperties/analysis/: cross_section.py  fea.py  section.py  solver.py
sectionproperties/examples/: README.md  example_advanced1.py  example_advanced2.py  example_bridgebeams.py  example_composite.py  example_custom.py  example_dxfimport.py  example_frame.py  example_hat1_section.py  example_merged.py  example_mirr_rot.py  example_nastran_section.py  example_simple.py  example_stress.py
sectionproperties/post/: post.py
sectionproperties/pre/: bisect_section.py  dxf.py  geometry.py  nastran_sections.py  offset.py  pre.py  rhino.py  sections.py
sectionproperties/tests/: complex_shape.3dm  complex_shape.txt  helper_functions.py  section_holes.dxf  test_Peery.py  test_bisect_section.py  test_concrete_sections.py  test_hyp.py  test_offset.py  test_peery.py  test_perimeter.py  test_plastic.py  test_rectangle.py  test_sections.py  test_stress.py  test_validation.py
src/sectionproperties/: __init__.py  __main__.py
tests/: __init__.py  complex_shape.txt  compound_shape.3dm  compound_shape.txt  conftest.py  helper_functions.py  rhino_data.json  section_holes_complex.dxf  test_angle.py  test_bisect_section.py  test_concrete_sections.py  test_custom.py  test_geometry.py  test_get_results.py  test_main.py  test_offset.py  test_peery.py  test_perimeter.py  test_plastic.py  test_rectangle.py  test_sections.py  test_stress.py  test_validation.py
tests/analysis/: __init__.py  test_plastic.py  test_stress.py  test_yield_moment.py
tests/benchmarks/: __init__.py  conftest.py  test_benchmark_analysis.py  test_benchmark_geom.py  test_benchmark_mesh.py  test_benchmarks.py
tests/cli/: __init__.py
tests/geometry/: 3in x 2in.3dm  __init__.py  rhino_data.json  test_geometry.py  test_offset.py  test_perimeter.py
tests/post/: __init__.py  test_get_results.py  test_post.py  test_stress_post.py
tests/section_library/: __init__.py  test_concrete_sections.py  test_steel_sections.py  test_timber_sections.py
tests/validation/: __init__.py  test_angle_validation.py  test_custom_validation.py  test_peery.py  test_pilkey.py  test_rectangle.py  test_rectangle_validation.py  test_validation.py
typings/cad_to_shapely/: __init__.pyi  dxf.pyi  utils.pyi
typings/cytriangle/: __init__.pyi
typings/numba/: __init__.pyi
typings/pypardiso/: __init__.pyi
typings/rhino_shapely_interop/: importers.pyi
(+42 files in other folders)
