[metadata]
name = sectionproperties
version = attr: sectionproperties.__version__
description = A python package for the analysis of arbitrary cross-sections using the finite element method
url = https://sectionproperties.readthedocs.io/
long_description = file: README.md, CHANGELOG.rst
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
keyword = cross-section, structural-engineering, finite-element-analysis, computational-mechanics
author = Robbie van Leeuwen
author_email = robbie.vanleeuwen@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://sectionproperties.readthedocs.io/
    Source =  https://github.com/robbievanleeuwen/section-properties
    Tracker = https://github.com/robbievanleeuwen/section-properties/issues

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7,<3.10
setup_requires =
    setuptools
install_requires =
    numpy
    scipy
    more_itertools
    matplotlib>=3.4
    shapely
    triangle
    cad_to_shapely>=0.3
    rich

[options.extras_require]
rhino =
  rhino-shapley-interop>=0.0.4

test =
  rhino-shapley-interop>=0.0.4
  pytest_check
